--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     --cor-de-fundo: #00030C;
     --fonte-principal: 'Inter';
     --roxo-bacana: rgb(128, 0, 128);
-    --botao-azul-efeito: #79b0f5;
+    --botao-azul-efeito: #002a5e;
 }
 
 body{
